--- a/src/app/application.component.html
+++ b/src/app/application.component.html
@@ -1,7 +1,8 @@
 <!-- You can set the "applicationName" property of the application header component by using the bracket [] notation and referring to the "name" property of the application component itself -->
-<application-header [applicationName]="name" ></application-header>
+<application-header #header [applicationName]="name" ></application-header>
 <div class="application">
 
-  <contact-screen></contact-screen>
-
+  <!--message-observable-viewer></message-observable-viewer-->
+  <!--user-list-viewer></user-list-viewer-->
+  <!--user-editor></user-editor--->
 </div>
