--- a/src/app/component/message-viewer/message-viewer.component.html
+++ b/src/app/component/message-viewer/message-viewer.component.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info" *ngIf="message != null">
     <div class="panel-heading">
-     <h3 class="panel-title">{{message.source}} (Frequency:{{message.sourceFrequency}},Total Number of Messages:{{message.sourceNumberOfMessages}}) <span class="badge">{{message.id}}</span></h3>
+     <h3 class="panel-title">Source {{message.source}} (Freq:{{message.sourceFrequency}},Total:{{message.sourceNumberOfMessages}}) <span class="badge">{{message.id}}</span></h3>
     </div>
     <div class="panel-body">
         {{message.text}}
